    - Component name check function to check names of componet before adding
      them to the component manager.
    - nnps_updater component to update NNPS information every time step.
    - time step updation components added.
    - viscoity components. 

Wed Nov 25 00:40:28 IST 2009
    - changes to carray numpy handling - was passing incorrect type to 
      PyArray_SimpleNewFromData.
    - get_nearest_particles call from time_step_component corrected.
    - zero checks in 2d kernel at correct points. 
Thursday 03 December 2009 (11:40:08 AM)
    - added check to ignore zero sized arrays in _setup_nnps in solver_base
    - added CuboidGenerator class.
    - NNPSManager will not enable cell-caching by default
    - corner break 3d example added.

Monday 07 December 2009 (01:11:30 AM)
    - get_centroid in cell.pyx changed - it was not taking into account the
    origin coords.
    - get_new_sibling function to all cells.
    - update function cpdefed.
    - __reduce__ and __setstate__ functions for IntPoint and Point classes.
    - parallel modules - work in progress - will not work now.
	- parallel_cell
	- parallel_controller
	- processor map
	- dummy parallel fsf solver.

Wednesday 09 December 2009 (05:16:55 AM)
    - carray.pyx
        - added the get_c_type function
	- add copy_values function
    - cell.pyx
        - added get_particle_ids to return indices of all particles in cell.
	- added get_new_child return child classes of cell.
	- added insert_particles to perform top-down additions of particles into
	  a cell hierarchy.
   	- added clear_indices to clear all indices in the cell hierarchy.
    - particle_array.pyx
        - added remove_flagged_particles function.
	- added set_flag, set_tag functions.
	- added extract_particles function.
	- 'local' property added to all particles arrays.
	- pickling routines.
    - parallel
        - new_cells exchanged properly.
	- neibhbor data exchanged properly.